fix: Fixed spacing on card el in ultrawide screens

--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -13,7 +13,7 @@
   }
 
   &__side {
-    height: 19rem;
+    height: 28rem;
     transition: all 0.8s ease;
     top: 0;
     left: 0;
